# TPRV

Lab1thread/Lab1thread/: Lab1thread.vcxproj  Lab1thread.vcxproj.filters
Lab1thread/Lab1thread/x64/Debug/: Lab1thread.exe.recipe  vc143.idb
Lab1thread/Lab1thread/x64/Debug/Lab1thread.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog
Lab2/lab2/lab2/: lab2.vcxproj
Lab2/lab2/lab2/x64/Debug/: lab2.exe.recipe
Lab2/lab2/lab2/x64/Release/: lab2.exe.recipe  lab2.iobj
Lab2/lab2_matrix/: lab2_matrix.sln
Lab2/lab2_matrix/lab2_matrix/x64/Debug/: lab2_matrix.exe.recipe  lab2_matrix.ilk  vc143.idb
Lab3/lab3/: CMakeLists.txt  lab3.cpp
Lab3/lab3zad2/: lab3zad2.sln
Lab3/lab3zad2/lab3zad2/: Source.cpp  lab3zad2.vcxproj
Lab3/lab3zad2/lab3zad2/x64/Debug/: lab3zad2.exe.recipe  lab3zad2.ilk  source.obj.enc  vc143.idb
Lab4/pic/: CMakeLists.txt  kernel.cu  matrix.cu
Lab5/matrix/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  matrix
Lab5/pic/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  pic
lab1/Lab1thread/: Lab1thread.sln
lab1/Lab1thread/Lab1thread/: Lab1thread.cpp
lab1/Lab1thread/Lab1thread/x64/Debug/: Lab1thread.ilk
lab2/: lab2.sln
lab2/lab2/: lab2.cpp
lab2/lab2/x64/Debug/: lab2.ilk  vc143.idb
lab2/lab2/x64/Release/: lab2.ipdb
lab2_matrix/lab2_matrix/: lab2_matrix.cpp  lab2_matrix.vcxproj  lab2_matrix.vcxproj.filters
matrix/: matrix.sln
matrix/matrix/: matrix.cpp  matrix.vcxproj
matrix/matrix/x64/Debug/: matrix.ilk  vc143.idb
(+45 files in other folders)
